@@ -7,6 +7,7 @@
 	Updated SpinStrings to work on Uranium
 	XP counter now works on Uranium
 	Improved Uranium banking performance
+	GnomeFlaxx0r -- picks flax, optionally strings, in Gnome Stronghold
 	
 	tba: Controller.getStatXp(int statId) deprecated because it only works on Coleslaw and you are better off with Controller.getPlayerExperience(int statId)
 	
